Added Comments through the main file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DSPtask)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(DSPtask main.cpp)
+add_executable(DSPtask main.cpp Complex.h cmake-build-debug/ComplexDeclare.h)
